force-app/main/default/objects/Complexe__c/Complexe__c.object-meta.xml
<CustomObject>
    <description>Objet Fiche Complexe alimentée par Vertica</description>
    <label>Cinéma</label>
    <nameField>
        <label>Nom du cinéma</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cinémas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>