force-app/main/default/objects/Complexe__c/fields/AudioDescription__c.field-meta.xml
<CustomField>
    <fullName>AudioDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audio Description</label>
    <type>Checkbox</type>
</CustomField>