force-app/main/default/objects/Complexe__c/fields/CodeComplexe__c.field-meta.xml
<CustomField>
    <fullName>CodeComplexe__c</fullName>
    <externalId>true</externalId>
    <label>Code Complexe</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>