force-app/main/default/objects/Complexe__c/fields/CodePays__c.field-meta.xml
<CustomField>
    <fullName>CodePays__c</fullName>
    <label>Code Pays</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>032</fullName>
            </value>
            <value>
                <fullName>033</fullName>
            </value>
            <value>
                <fullName>034</fullName>
            </value>
            <value>
                <fullName>039</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>