force-app/main/default/objects/Complexe__c/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <label>Code Postal</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>