force-app/main/default/objects/Complexe__c/fields/EstActif__c.field-meta.xml
<CustomField>
    <fullName>EstActif__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>