force-app/main/default/objects/Complexe__c/fields/HoraireCinema__c.field-meta.xml
<CustomField>
    <fullName>HoraireCinema__c</fullName>
    <label>Horaires Ouverture / Fermeture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>