force-app/main/default/objects/Complexe__c/fields/NbrSalles__c.field-meta.xml
<CustomField>
    <fullName>NbrSalles__c</fullName>
    <label>Nombre de Salles</label>
    <summaryForeignKey>Salle__c.Complexe__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>