force-app/main/default/objects/Complexe__c/fields/ParkingTarifsPartenaires__c.field-meta.xml
<CustomField>
    <fullName>ParkingTarifsPartenaires__c</fullName>
    <label>Parking et tarifs partenaires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>