force-app/main/default/objects/Complexe__c/fields/Point_vente_UI__c.field-meta.xml
<CustomField>
    <fullName>Point_vente_UI__c</fullName>
    <defaultValue>true</defaultValue>
    <description>utiliser pour filter les cinema qui ont un point de vente des abonnement UI.
Gestion des offres</description>
    <label>Point de vente UI</label>
    <type>Checkbox</type>
</CustomField>