force-app/main/default/objects/Complexe__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Région</label>
    <length>255</length>
    <type>Text</type>
</CustomField>