force-app/main/default/objects/Complexe__c/fields/Rue__c.field-meta.xml
<CustomField>
    <fullName>Rue__c</fullName>
    <label>Rue</label>
    <type>TextArea</type>
</CustomField>