force-app/main/default/objects/Complexe__c/fields/TECH_QueueName__c.field-meta.xml
<CustomField>
    <fullName>TECH_QueueName__c</fullName>
    <description>Nom technique de la file d&#39;attente</description>
    <label>TECH_QueueName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>