force-app/main/default/objects/Complexe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EstActif__c</columns>
    <columns>CodeComplexe__c</columns>
    <columns>Region__c</columns>
    <columns>CodePays__c</columns>
    <columns>Point_vente_UI__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les complexes</label>
</ListView>